# PrivacyBox

./: .gitignore  README.md  build.py  privacybox.spec  pyproject.toml
installer/linux/: build_deb.sh
installer/macos/: build_pkg.sh
privacybox/: __main__.py  install_config.py
privacybox/cli/commands/: config_cmd.py  template_cmd.py
privacybox/config/: loader.py  schema.py  wizard.py
privacybox/credentials/: store.py
privacybox/credentials/backends/: base.py
privacybox/doctor/: __init__.py
privacybox/llm/: claude_provider.py  ollama_provider.py  openai_provider.py
privacybox/plugins/interfaces/: __init__.py
privacybox/runtime/: base.py
privacybox/templates/: renderer.py
privacybox/templates/builtins/: navidrome.yaml  nextcloud.yaml  plausible.yaml  seafile.yaml
privacybox/utils/: platform.py  types.py
src/privacybox/cli/: app.py
src/privacybox/cli/commands/: credential_cmd.py  deploy.py  doctor_cmd.py  manage.py
src/privacybox/credentials/backends/: keychain_backend.py
src/privacybox/llm/: base.py
src/privacybox/runtime/: docker_backend.py
src/privacybox/state/: database.py
src/privacybox/templates/: registry.py
src/privacybox/templates/builtins/: gitea.yaml  jellyfin.yaml  n8n.yaml  wordpress.yaml
